--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,38 +1,35 @@
 {
-  "name": "project",
+  "name": "sidimesus",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "~4.6.1",
-    "jquery": "~3.6.0",
-    "merge": "^2.1.1",
-    "oidc-client": "~1.11.5",
-    "react": "~16.14.0",
-    "react-dom": "~16.14.0",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router": "~5.2.1",
-    "react-router-dom": "~5.3.0",
-    "reactstrap": "~8.10.1",
-    "rimraf": "^3.0.2"
-  },
-  "devDependencies": {
-    "ajv": "^6.9.1",
-    "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "nan": "^2.14.1",
-    "react-scripts": "^5.0.0"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "prop-types": "^15.8.1",
+    "ra-data-json-server": "^5.0.4",
+    "react": "^18.3.1",
+    "react-admin": "^5.0.4",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "rimraf ./build && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -45,9 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "url-parse": ">=1.5.0",
-    "lodash": ">=4.17.21"
   }
 }
