--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "ConexaoPostGre": {
+    "PostGreConnectionString": "Server=localhost;port=5433;DataBase=esus;Uid=postgres;password=wL[[NoS~Nyd2SyFudzkCD@oh*-W"
+  },
+  "AllowedHosts": "*"
 }
